MAJOR CHANGES in JADE x.y (???)
==========================================================================
GENERAL IMPROVEMENTS:	
- Modified DF to cache subscription relevant information. This speeds up performances when detecting subscribed agents to be notified about registration updates
- Modified FullResourceManager to avoid annoying stack traces at platform shutdown
- Modified MainContainerImpl to start the AMS and DF threads in the SystemAgent Thread Group
- Created CFReflectiveIntrospector to support usage of java.util classes in ontological classes
- Committed automatically generated SL and ACL parser classes
- Added dump-options option to print out configuration options at container startup
- Added methods to get predicate, concept and action names from an ontology
- Added method to define action-result type in AgentActionSchema

BUG-FIXES:
- Included fix by Geoffrey De Smet to properly deal with loggers that are not JADE loggers. 

LEAP:
- Added support for ServiceHelper retrieval and usage in split container execution mode


ADD-ONS:


DOCUMENTATION:
- Updated tutorial on Content Languages and Ontologies with information about the new CFReflectiveIntrospector


POSSIBLE BACKWARD INCOMPATIBILITIES:
NONE



MAJOR CHANGES in JADE 3.4.1 (15th November 2006)  
==========================================================================
GENERAL IMPROVEMENTS:	
- Modified HTTP MTP to properly select the XML parser (by Krešimir Jurasovic - University of Zagreb).
- Substituted getHostName() with getCanonicalHostName() in HTTP MTP to resolve domain problems.
- Added support for low-level container introspection by means of the ContainerMonitorAgent (jade_core_AgentContainerImpl_enablemonitor parameter).
- Added method getParam(int index) to JADE commands (jade.core.Command class).
- Modified message tracing mechanism to take the ACLMessage.TRACE user define property into account.
- Improved agent cloning error management.